src/test/ui/borrowck/borrowck-fn-in-const-a.ast.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-fn-in-const-a.rs:9:16
   |
LL |         return *x //[ast]~ ERROR cannot move out of borrowed content [E0507]
   |                ^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
